force-app/main/default/objects/ContactPointEmail/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Point Emails</relationshipLabel>
    <relationshipName>ContactPointEmail</relationshipName>
    <type>Lookup</type>
</CustomField>