force-app/main/default/objects/ContactPointEmail/fields/Email_SOL_Old__c.field-meta.xml
<CustomField>
    <fullName>Email_SOL_Old__c</fullName>
    <label>Email SOL Old</label>
    <type>Email</type>
</CustomField>