force-app/main/default/objects/ContactPointEmail/fields/EmailTypeResult__c.field-meta.xml
<CustomField>
    <fullName>EmailTypeResult__c</fullName>
    <label>Tipologia Risultato EMAIL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard Bounce</fullName>
            </value>
            <value>
                <fullName>Soft Bounce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>