force-app/main/default/objects/ContactPointEmail/fields/IsArchived__c.field-meta.xml
<CustomField>
    <fullName>IsArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica l&apos;avvenuta archiviazione del record su DB Azure</description>
    <label>Archiviato</label>
    <type>Checkbox</type>
</CustomField>