force-app/main/default/objects/ContactPointEmail/fields/SendToMarketingCloud__c.field-meta.xml
<CustomField>
    <fullName>SendToMarketingCloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invia a Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>