force-app/main/default/objects/ContactPointEmail/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Valorizzare durante migrazione (vedi LOV)</description>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-mail Anagrafica</fullName>
            </value>
            <value>
                <fullName>E-mail SOL</fullName>
            </value>
            <value>
                <fullName>E-mail Bolletta</fullName>
            </value>
            <value>
                <fullName>E-mail SOL Old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>